addrspace/apps/latchkey/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: latchkey
  labels:
    app: latchkey
spec:
  type: ClusterIP
  selector:
    app: latchkey
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
